--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
     <div class="container">
         <h1>Pinak Idea Lab</h1>
-        <img class="smiley" src="emoji.jpg" alt="Smiley Image">
+        <img class="smiley" url="https://upload.wikimedia.org/wikipedia/commons/e/e0/SNice.svg" alt="Smiley Image">
     </div>
     <div class="footer">
         <div class="footer-slit"></div> <!-- Added the slit element -->
